--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "owl framework template site",
     "type": "project",
     "require": {
-        "yeaha/owl": "0.2.*",
-        "monolog/monolog": "1.*.*",
-        "predis/predis": "1.0.*"
+        "yeaha/owl": "^0.2",
+        "monolog/monolog": "^1.17",
+        "predis/predis": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5.0"
