--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,16 @@
     "name": "yeaha/owl-site",
     "description": "owl framework template site",
     "type": "project",
+    "license": "proprietary",
     "require": {
         "yeaha/owl": "^0.3",
         "monolog/monolog": "^1.17",
         "predis/predis": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5.0"
+        "phpunit/phpunit": "^5.1.0"
+    },
+    "autoload": {
+        "psr-4": {"Tests\\": "./tests"}
     }
 }
