--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "yeaha/owl": "^0.3",
-        "monolog/monolog": "^1.17",
+        "yeaha/owl": "1.0.*",
+        "monolog/monolog": "^1.19",
         "predis/predis": "^1.0"
     },
     "require-dev": {
