--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,7 @@
     "license": "proprietary",
     "require": {
         "yeaha/owl": "1.0.*",
-        "monolog/monolog": "^1.19",
-        "predis/predis": "^1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^5.1.0"
+        "monolog/monolog": "^1.19"
     },
     "autoload": {
         "psr-4": {"Tests\\": "./tests"}
