--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,12 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "yeaha/owl": "1.0.*",
+        "yeaha/owl": "1.1.*",
         "monolog/monolog": "^1.20"
     },
     "autoload": {
-        "psr-4": {"Tests\\": "./tests"}
+        "psr-4": {
+            "Tests\\": "./tests"
+        }
     }
 }
